Fix syntax-highlighter on mobile

--- a/css/style.sass
+++ b/css/style.sass
@@ -124,6 +124,8 @@ footer
 @media screen and (max-width: 768px)
   .container
     width: 80vw
+  pre
+    width: 50%
 
 @media screen and (max-width: 375px)
   #contact-btns
